# HFD-6-Hapitc-Device

HFD-6 Haptic Device_CN/10_Demo/Imstk_Demo/install/data/: axesPoly.vtk
HFD-6 Haptic Device_CN/10_Demo/Imstk_Demo/install/data/IBL/: roomIrradiance.dds
HFD-6 Haptic Device_CN/10_Demo/Imstk_Demo/install/data/Tissues/: tissue_hole.stl  tissue_hole.vtk
HFD-6 Haptic Device_CN/10_Demo/Imstk_Demo/install/data/asianDragon/: asianDragon.URendering.float  asianDragon.bou  asianDragon.config  asianDragon.cub  asianDragon.veg
HFD-6 Haptic Device_CN/10_Demo/Imstk_Demo/install/data/head/: HeadTexture_BaseColor.dds  HeadTexture_Normal.dds  (+3 more)
HFD-6 Haptic Device_CN/10_Demo/SOFA_Demo/SOFA_v22.12.00_Win64/: git-info.txt
HFD-6 Haptic Device_CN/10_Demo/SOFA_Demo/SOFA_v22.12.00_Win64/HFDscene/: HFDConfig.cmake.in
HFD-6 Haptic Device_CN/10_Demo/SOFA_Demo/SOFA_v22.12.00_Win64/lib/: Sofa.Component.Collision.Detection.Algorithm.lib  Sofa.Component.Constraint.Projective.lib  Sofa.Component.Engine.Analyze.lib  Sofa.Component.Engine.Generate.lib  Sofa.Component.LinearSolver.Direct.lib  Sofa.Component.LinearSolver.Iterative.lib  Sofa.Component.Mapping.MappedMatrix.lib  Sofa.Component.Mass.lib  Sofa.Component.MechanicalLoad.lib  Sofa.Component.Visual.lib  Sofa.GUI.Qt.lib  Sofa.Helper.lib  Sofa.Simulation.Common.lib
HFD-6 Haptic Device_CN/3_控制软件/HFD_Test_linux/lib/: libgssapi_krb5.so.2  libkrb5.so.3
HFD-6 Haptic Device_CN/4_示例程序/Linux/HFD Example_linux/: HFD_Example.pro  HFD_OPEN.h  Makefile  Makefile.Release  main.cpp
HFD-6 Haptic Device_CN/4_示例程序/Windows/HFD Example_win/: HFD Example.sln
HFD-6 Haptic Device_CN/4_示例程序/Windows/HFD Example_win/HFD Example/: HFD Example.vcxproj.filters  hfdDefines.h
HFD-6 Haptic Device_CN/6_库文件/Windows/Win32/Debug/: HFD_APId.lib
HFD-6 Haptic Device_CN/6_库文件/Windows/Win32/Release/: HFD_API.lib
HFD-6 Haptic Device_CN/6_库文件/Windows/x64/Debug/: HFD_API64d.lib
HFD-6 Haptic Device_CN/9_External Module/HFDTech3D/: Readme.md
HFD-6 Haptic Device_CN/9_External Module/HFDTech3D/include/: HFDTech3D.h
HFD-6 Haptic Device_CN/9_External Module/HFDTech3D/src/: HFDTech3D.cpp
HFD-6 Haptic Device_CN/9_External Module/ROS/hfd_ros1/HFD_Driver/: package.xml
HFD-6 Haptic Device_CN/9_External Module/ROS/hfd_ros1/HFD_Driver/include/: HFD_OPEN.h  hfdVector.h
HFD-6 Haptic Device_CN/9_External Module/ROS/hfd_ros1/HFD_Driver/msg/: xd.msg
HFD-6 Haptic Device_CN/9_External Module/ROS/hfd_ros1/HFD_Driver/src/: hfd_driver.cpp
HFD-6 Haptic Device_CN/9_External Module/ROS/hfd_ros2/: .gitignore
HFD-6 Haptic Device_CN/9_External Module/ROS/hfd_ros2/hfd_driver/: CMakeLists.txt  package.xml
HFD-6 Haptic Device_CN/9_External Module/ROS/hfd_ros2/hfd_driver/include/hfd_driver/: hfdDefines.h
HFD-6 Haptic Device_CN/9_External Module/ROS/hfd_ros2/hfd_driver/src/: hfd_interface.cpp
HFD-6 Haptic Device_CN/9_External Module/SOFA/HFD/include/: CLAF_OPEN.h
HFD-6 Haptic Device_CN/9_External Module/SOFA/HFD/scenes/: HFDEmulator-RigidCubes.scn
HFD-6 Haptic Device_EN/10_Demo/SOFA_Demo/SOFA_v22.12.00_Win64/HFDscene/: CMakeLists.txt
HFD-6 Haptic Device_EN/10_Demo/SOFA_Demo/SOFA_v22.12.00_Win64/HFDscene/include/: HFD_OPEN.h  hfdDefines.h
HFD-6 Haptic Device_EN/10_Demo/SOFA_Demo/SOFA_v22.12.00_Win64/HFDscene/lib/: HFD_API64d.lib
HFD-6 Haptic Device_EN/10_Demo/SOFA_Demo/SOFA_v22.12.00_Win64/HFDscene/src/HFD/: HFDDriver.cpp  HFDVisualModel.cpp
HFD-6 Haptic Device_EN/10_Demo/SOFA_Demo/SOFA_v22.12.00_Win64/config/: runSofa.ini
HFD-6 Haptic Device_EN/10_Demo/SOFA_Demo/SOFA_v22.12.00_Win64/lib/: Sofa.Component.Collision.Response.Contact.lib  Sofa.Component.Constraint.Lagrangian.Model.lib  Sofa.Component.Constraint.Lagrangian.Solver.lib  Sofa.Component.Diffusion.lib  Sofa.Component.Engine.Select.lib  Sofa.Component.Engine.Transform.lib  Sofa.Component.LinearSolver.Preconditioner.lib  Sofa.Component.Mapping.NonLinear.lib  Sofa.Component.SolidMechanics.FEM.Elastic.lib  Sofa.Component.SolidMechanics.FEM.HyperElastic.lib  Sofa.Component.SolidMechanics.Spring.lib  Sofa.Component.StateContainer.lib  Sofa.GL.lib  Sofa.GUI.Batch.lib  Sofa.LinearAlgebra.lib  Sofa.Simulation.Core.lib  Sofa.Simulation.Graph.lib  csparse.lib  metis.lib
HFD-6 Haptic Device_EN/10_Demo/Unity_Demo/HFDTech3D_Data/: ScriptingAssemblies.json  app.info  data.unity3d
HFD-6 Haptic Device_EN/3_Control Software/HFD_Test_linux/: HFD_Test
HFD-6 Haptic Device_EN/3_Control Software/HFD_Test_linux/lib/: libk5crypto.so.3  libkrb5support.so.0
HFD-6 Haptic Device_EN/4_Example Software/Linux/HFD Example_linux/: HFD_API_global.h  Makefile.Debug  hfdVector.inl
HFD-6 Haptic Device_EN/4_Example Software/Linux/HFD Example_linux/HFD_Example/: HFD_Example
HFD-6 Haptic Device_EN/4_Example Software/Windows/HFD Example_win/HFD Example/: HFD Example.cpp  HFD Example.vcxproj  HFD_OPEN.h  hfdVector.inl
HFD-6 Haptic Device_EN/9_External Module/HFDTech3D/: CMakeLists.txt
HFD-6 Haptic Device_EN/9_External Module/HFDTech3D/cmake/: findHFDTech3D.cmake
HFD-6 Haptic Device_EN/9_External Module/HFDTech3D/ext/HFD/include/: hfdVector.h
HFD-6 Haptic Device_EN/9_External Module/HFDTech3D/ext/HFD/lib/Release/: HFD_API64.lib
HFD-6 Haptic Device_EN/9_External Module/ROS/hfd_ros1/HFD_Driver/: CMakeLists.txt  Readme.md
HFD-6 Haptic Device_EN/9_External Module/ROS/hfd_ros2/: README.md
HFD-6 Haptic Device_EN/9_External Module/ROS/hfd_ros2/hfd_description/: CMakeLists.txt  package.xml
HFD-6 Haptic Device_EN/9_External Module/ROS/hfd_ros2/hfd_msgs/: CMakeLists.txt  package.xml
HFD-6 Haptic Device_EN/9_External Module/ROS/hfd_ros2/hfd_msgs/msg/: HfdCommand.msg  HfdState.msg
HFD-6 Haptic Device_EN/9_External Module/SOFA/HFD/: README.txt
HFD-6 Haptic Device_EN/9_External Module/SOFA/HFD/include/: clafDefines.h  clafVector.h  clafVector.inl
HFD-6 Haptic Device_EN/9_External Module/SOFA/HFD/lib/: CLAF_API64d.lib
HFD-6 Haptic Device_EN/9_External Module/SOFA/HFD/scenes/: HFD-DeformableCubes.scn  HFD-DeformableSphere.scn  HFD-Demo.scn  HFD-FEMLiver.scn  HFD-RigidCubes.scn  HFD-RigidSkull-restShapeSpringForceField.scn  HFD-RigidSkull.scn
(+865 files in other folders)
