<package format="2">
  <name>HFD_Driver</name>
  <version>0.0.0</version>
  <description>The hfd_driver package</description>
  
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <build_type>catkin</build_type>
  </export>
</package>

