<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hfd_driver</name>
  <version>0.0.0</version>
  <description>The hfd_driver package</description>
  <maintainer email="jade.cong@qq.com">Jade Cong</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://github.com/JadeCong/hfd_ros2/tree/main/hfd_driver</url>
  <author email="jade.cong@qq.com">Jade Cong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hfd_msgs</build_depend>
  <build_depend>xjcsensor_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hfd_msgs</exec_depend>
  <exec_depend>xjcsensor_msgs</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
