<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hfd_description</name>
  <version>0.0.0</version>
  <description>The hfd_description package</description>
  <maintainer email="jade.cong@qq.com">Jade Cong</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://github.com/JadeCong/hfd_ros2/tree/main/hfd_description</url>
  <author email="jade.cong@qq.com">Jade Cong</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
